# LION

./: .gitignore  .mcp.json  Dockerfile  README.md  pyproject.toml  setup.py
.github/workflows/: docker-build.yml  release-publish.yml
lion-mcp/: README.md  pyproject.toml
lion-mcp/src/lion_mcp/: __init__.py  server.py
lionz/: cli_theme.py  constants.py  file_utilities.py  image_conversion.py  input_validation.py  lionz.py  models.py  predict.py  scratch.py  system.py  telemetry.py
